# risk-monitor-engine

./: .dockerignore  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  ENABLE_NEARBLOCKS_INTEGRATION.md  EXAMPLE-PARALLEL-ACCOUNTS.env  EXAMPLE.env  EXECUTE_NOW.bat  EXECUTE_NOW.ps1  NEAR_INTENT_LOGIN.md  NEAR_PROTOCOL_REWARDS_PROGRESS.md  NEW-WALLET-TRANSFER.md  PROTOCOL_REWARDS_IMPLEMENTATION.md  PROTOCOL_REWARDS_README.md  PROTOCOL_REWARDS_SUMMARY.md  README-PARALLEL-ACCOUNT-TRANSFERS.md  README.md  READY_TO_EXECUTE.md  REWARDS_PROGRESS_SUMMARY.md  VERCEL_DEPLOYMENT_FIX.md  actual-transactions-executor.ts  check-env.js  complete-protocol-rewards-demo.ts  complete-protocol-rewards-executor.ts  debug-env.ts  deploy-all.sh  deploy-contracts.sh  docker-compose.yml  enhanced-protocol-rewards-executor.ts  env.template  execute-minimal-transactions.ts  execute-rewards-transactions.ts  execute-rewards-with-main-account.ts  execute-rewards.bat  execute-rewards.ps1  execute-transaction.js  github-issues.md  jest.config.cjs  junit.xml  (+37 more)
contracts/opportunity-contract-v0/: Cargo.toml  README.md  deploy.sh
contracts/opportunity-contract-v0/src/: lib.rs
contracts/vault-contract/: Cargo.toml  deploy.sh  near-config.json
contracts/vault-contract/src/: lib.rs
e2e/: example.spec.ts
event-logger/: package.json
executor-bot-v0/: README.md  env.example  package.json  start.sh
k8s/: deployment.yaml  service.yaml
scoring-system-v0/: README.md  package.json
scoring-updater/: package.json
scripts/: fix-import-paths.js  update-api-routes.js  update-route-files.js  (+1 more)
(+253 files in other folders)
