[package]
name = "vault-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
borsh = "1.5.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

